--- a/projects/capstone/starter/frontend/package.json
+++ b/projects/capstone/starter/frontend/package.json
@@ -3,11 +3,17 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node index.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
+  },
+  "main": "index.js",
+  "engines": {
+    "node": "13.7.0",
+    "npm": "6.13.6"
   },
   "private": true,
   "dependencies": {
@@ -22,13 +28,17 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@auth0/angular-jwt": "^3.0.1",
+    "auth0-js": "^9.12.2",
     "bootstrap": "^4.4.1",
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "request": "^2.81.0",
     "@angular-devkit/build-angular": "~0.803.24",
     "@angular/cli": "~8.3.24",
     "@angular/compiler-cli": "~8.2.14",
